--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:name="com.person.bitmaprepository.app.TestApplication"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.person.bitmaprepository.sample.MainActivity"
